creating player card and showing all players

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 </head>
 
 <body>
-
+    <main class="players">
+        <h1>EA FC 25 Players</h1>
+        <div class="players-main">
+            <div class="players-all" id="players-all">
+                <!-- ==================  add player here ==================== -->
+            </div>
+            <div class="players-filter">
+                <a href="#" id="add-player" class="main-button">Add player</a>
+                <a href="#" class="secondary-button">Go back to Team</a>
+            </div>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 
