--- a/players.html
+++ b/players.html
@@ -2,92 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Players</title>
     <link rel="shortcut icon" href="assets/game.png" type="image/x-icon">
-    <title>Build Team</title>
+    <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="my-container">
-        <div class="stad-players">
-            <img class="pitch-image" src="./assets/thestadium.png" alt="" />
-            <div class="players-container" id="players-container">
-                <div id="player1">
-                    <a href="">
-                        <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-                    </a>
-                </div>
-                <div id="player2">
-                    <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
-                </div>
-                <div id="player3">
-                    <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
-                </div>
-                <div id="player4">
-                    <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
-                </div>
-                <div id="player5">
-                    <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
-                </div>
-                <div id="player6">
-                    <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
-                </div>
-                <div id="player7">
-                    <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
-                </div>
-                <div id="player8">
-                    <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
-                </div>
-                <div id="player9">
-                    <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
-                </div>
-                <div id="player10">
-                    <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
-                </div>
-                <div id="player11">
-                    <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
-                </div>
-            </div>
-
-        </div>
-        <div class="formation-container">
-            <div class="formations">
-                <div>
-                    4-3-3
-                </div>
-                <div class="active">
-                    4-4-2
-                </div>
-                <div>
-                    4-5-1
-                </div>
-            </div>
-
-            <div class="all-players">
-                <a href="players.html"> All Players</a>
-            </div>
-            <div class="bench">
-                <a href="#players">
-                    <div class="bench-button" id="bench-button"> BENCH <i class="rotate90 fa-solid fa-caret-down"></i>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-    <main class="players" id="players">
+    <main class="players">
         <div class="players-heading">
             <h1 class="main-title">EA FC 25 Players</h1>
             <div class="players-filter">
@@ -269,7 +193,7 @@
             </div>
         </div>
     </main>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
