add scroll to players when i click on a player slot

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 <a href="players.html"> All Players</a>
             </div>
             <div class="bench">
-                <a href="#players">
-                    <div class="bench-button" id="bench-button"> BENCH <i class="rotate90 fa-solid fa-caret-down"></i>
+                <a href="#players" id="scroll-to-players">
+                    <div class="bench-button" id="bench-button"> BENCH <i class="fa-solid fa-caret-down"></i>
                     </div>
                 </a>
             </div>
