Dynamic form for adding players ratings

--- a/players.html
+++ b/players.html
@@ -126,64 +126,7 @@
                             </div>
                         </div>
                         <hr>
-                        <div class="one-line">
-                            <div class="one-input-box">
-                                <label for="pace">Pace</label>
-                                <div class="one-input">
-                                    <input type="number" id="pace" placeholder="e.g 99">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                            <div class="one-input-box">
-                                <label for="shooting">Shooting</label>
-                                <div class="one-input">
-                                    <input type="number" id="shooting" placeholder="e.g 99">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                            <div class="one-input-box">
-                                <label for="passing">Passing</label>
-                                <div class="one-input">
-                                    <input type="number" id="passing" placeholder="e.g 99">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="one-line">
-                            <div class="one-input-box">
-                                <label for="dribbling">Dribbling</label>
-                                <div class="one-input">
-                                    <input type="number" id="dribbling" placeholder="e.g 99">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                            <div class="one-input-box">
-                                <label for="defending">Defending</label>
-                                <div class="one-input">
-                                    <input type="number" id="defending" placeholder="e.g 99">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                            <div class="one-input-box">
-                                <label for="physical">Physical</label>
-                                <div class="one-input">
-                                    <input type="number" id="physical" placeholder="e.g 99">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                        </div>
+                        <div id="stats-container"></div>
                     </form>
                     <div class="buttons">
                         <button class="main-button" id="submit-button" type="submit">Submit</button>
