working on responsive design and bench button4

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="stad-players">
             <img class="pitch-image" src="./assets/thestadium.png" alt="" />
             <div class="players-container" id="players-container">
-                <div id="player1" class="position-slot">
+                <div id="player1"  class="position-slot">
                     <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
                 </div>
                 <div id="player2" class="position-slot">
@@ -64,14 +64,16 @@
                 </div>
             </div>
 
-            <div class="all-players">
-                <a href="players.html"> All Players</a>
-            </div>
+           
             <div class="bench">
                 <a href="#players" id="scroll-to-players">
-                    <div class="bench-button" id="bench-button"> BENCH <i class="fa-solid fa-caret-down"></i>
+                    <div class="bench-button" id="bench-button"> BENCH 
+                        <!-- <i class="fa-solid fa-caret-down"></i> -->
                     </div>
                 </a>
+            </div>
+            <div class="all-players">
+                <a href="players.html"> All Players</a>
             </div>
         </div>
     </div>
