fixing error of not showing validation when submitting adding form

--- a/players.html
+++ b/players.html
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                         <hr>
-                        <div id="stats-container"></div>
+                        <div id="stats-container" class="stats-container"></div>
                     </form>
                     <div class="buttons">
                         <button class="main-button" id="submit-button" type="submit">Submit</button>
