--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
            
             <div class="bench">
                 <a href="#players" id="scroll-to-players">
-                    <div class="bench-button" id="bench-button"> BENCH 
-                        <!-- <i class="fa-solid fa-caret-down"></i> -->
+                    <div class="bench-button" id="bench-button"> Reserve
                     </div>
                 </a>
             </div>
