cleaning code - fixing bugs of selected players - adding changing formation feature and fixing errors - fixing some responsive errors

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="my-container">
         <div class="stad-players">
             <img class="pitch-image" src="./assets/thestadium.png" alt="" />
-            <div class="players-container" id="players-container">
+            <div class="players-container formation-442" id="players-container">
                 <div id="player1"  class="position-slot">
                     <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
                 </div>
@@ -49,22 +49,14 @@
                     <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
                 </div>
             </div>
-
         </div>
+
         <div class="formation-container">
             <div class="formations">
-                <div>
-                    4-3-3
-                </div>
-                <div class="active">
-                    4-4-2
-                </div>
-                <div>
-                    4-5-1
-                </div>
+                <div id="formation-433">4-3-3</div>
+                <div id="formation-442" class="active">4-4-2</div>
+                <div id="formation-343">3-4-3</div>
             </div>
-
-           
             <div class="bench">
                 <a href="#players" id="scroll-to-players">
                     <div class="bench-button" id="bench-button"> Reserve
@@ -76,6 +68,7 @@
             </div>
         </div>
     </div>
+    
     <main class="players" id="players">
         <div class="players-heading">
             <h1 class="main-title">EA FC 25 Players</h1>
@@ -86,7 +79,6 @@
         </div>
         <div class="players-main">
             <div class="players-all" id="players-all">
-                <!-- ============  add player here ============ -->
             </div>
         </div>
     </main>
