--- a/players.html
+++ b/players.html
@@ -21,9 +21,8 @@
         </div>
         <div class="players-main">
             <div class="players-all" id="players-all">
-                <!-- ============  add player here ============ -->
+                <!-- ============  add players here ============ -->
             </div>
-
 
             <div class="modal-container" id="modal-container">
                 <div class="modal">
