fixing some css errors

--- a/index.html
+++ b/index.html
@@ -57,14 +57,15 @@
                 <div id="formation-442" class="active">4-4-2</div>
                 <div id="formation-343">3-4-3</div>
             </div>
+            
+            <div class="all-players">
+                <a href="players.html" > All Players <i class="fa-solid fa-angles-right"></i></a>
+            </div>
             <div class="bench">
                 <a href="#players" id="scroll-to-players">
-                    <div class="bench-button" id="bench-button"> Reserve
+                    <div class="bench-button" id="bench-button"> Reserve <i class="fa-solid fa-angles-down"></i>
                     </div>
                 </a>
-            </div>
-            <div class="all-players">
-                <a href="players.html"> All Players</a>
             </div>
         </div>
     </div>
