Update feature added - fix some bugs

--- a/players.html
+++ b/players.html
@@ -128,6 +128,7 @@
                         <div id="stats-container" class="stats-container"></div>
                     </form>
                     <div class="buttons">
+                        <button class="main-button saveButton" id="saveButton" >Save changes</button>
                         <button class="main-button" id="submit-button" type="submit">Submit</button>
                         <button class="secondary-button" id="close">Close</button>
                     </div>
